--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flogar/gre-api",
+    "name": "flogar/gre",
     "description": "API para nueva plataforma de guia de remision - SUNAT.",
     "keywords": [
         "sunat",
