--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "peru",
         "api"
     ],
-    "homepage": "https://github.com/jucafloga/gre-api",
+    "homepage": "https://github.com/jucafloga/flogar-gre",
     "type": "library",
     "license": "MIT",
     "authors": [
